Placeholder for js

--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 		</div>
 		<hr/>
 
-		<div class="links-and-contact">
+		<div>
 			<div class="links">
 				<h3>Links</h3>
 				<ul class="links-list">
-					<li><a href="https://github.com/deelivingston"> Github</a> </li>
+					<li><a href="https://github.com/deelivingston">Github</a> </li>
 					<li><a href="https://www.linkedin.com/in/dianehowe/">LinkedIn</a></li>
 					<li></li>
 				</ul>
 			</div>
 
-			<div>
+<!-- 			<div>
 				<form action="#">
 					<label for="email">
 						<h4>Email</h4>
@@ -73,11 +73,14 @@
 						<textarea id="message">Your Message</textarea>
 					</label>
 					<div class="submit-button-wrapper">
-						<input type="submit" value="Send Message" />
+						<input type="submit" id="submitButton" value="Send Message" />
 					</div>
 				</form>
-			</div>
+			</div> -->
 		</div>
 	</div>
+	<!--
+	<script src="script.js"></script>
+	-->
 	</body>
 </html>
