--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Diane Howe Portfolio</title>
-		<link rel="stylesheet" href="styles.css">
-		<meta name="viewport" content="width=display-width, initial-scale=1">
-		<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Mono&display=swap" rel="stylesheet">
-	</head>
-	<body>
-		<div class="container">
-			<div class="intro">
-				<img class="profile-picture" src="images/DianeHeadShot.jpeg" />
-				<h1>Diane Howe</h1>
-				<h3>Software Engineer at <a href="https://www.syncroness.com">Syncroness</a></h3>
-				<p>{{ say something here }}</p>
-			</div>
-			<hr/>
 
-			<div class="about-grid">
-				<div class="i-am">
-					<h3>I Am</h3>
-					<ul class="about-list">
-						<li>A Mom</li>
-						<li>A volunteer and benefactor</li>
-						<li>Member of <a href="https://www.swe.org">Society of Women Engineers</a></li>
-					</ul>
-				</div>
+<head>
+	<meta charset="utf-8" name="viewport" content="width=display-width, initial-scale=1">
+	<title>Diane Howe Portfolio</title>
+	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Mono&display=swap" rel="stylesheet">
+</head>
+
+<body>
+	<div class="container">
+		<div class="intro">
+			<img class="profile-picture" src="images/DianeHeadShot.jpeg" alt="diane howe profile picture"/>
+			<h1>Diane Howe</h1>
+			<h3>Software Engineer at <a href="https://www.syncroness.com">Syncroness</a></h3>
+			<p>{{ curiouser and curiouser }}</p>
+		</div>
+		<hr />
+
+		<div class="about-grid">
+			<div class="i-am">
+				<h3>I Am</h3>
+				<ul class="about-list">
+					<li>A Mom</li>
+					<li><a href="vol-bene.html">A volunteer and benefactor</a></li>
+					<li>Member of <a href="https://www.swe.org">Society of Women Engineers</a></li>
+				</ul>
+			</div>
 
 			<div class="i-like">
-				<h3>I Like To</h3>	
+				<h3>I Like To</h3>
 				<ul class="about-list">
 					<li>Mountain Bike</li>
 					<li>Hike</li>
@@ -35,7 +37,7 @@
 				</ul>
 			</div>
 		</div>
-		<hr/>
+		<hr />
 
 		<div>
 			<h3 class="projects-heading">My Projects</h3>
@@ -50,7 +52,7 @@
 				</div>
 			</div>
 		</div>
-		<hr/>
+		<hr />
 
 		<div>
 			<div class="links">
@@ -62,7 +64,7 @@
 				</ul>
 			</div>
 
-<!-- 			<div>
+			<!-- 			<div>
 				<form action="#">
 					<label for="email">
 						<h4>Email</h4>
@@ -82,5 +84,6 @@
 	<!--
 	<script src="script.js"></script>
 	-->
-	</body>
+</body>
+
 </html>
