Tweak email input and vol links

--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
 				</ul>
 			</div>
 
-			<!-- 			<div>
-				<form action="#">
+<!--
+			<div>
+				<form action="mailto: email@gmail.com">
 					<label for="email">
 						<h4>Email</h4>
-						<input id="email" placeholder="Enter your email" />
+						<input type="email" id="email" placeholder="Enter your email" />
 					</label>
 					<label for="message">
 						<h4>Message</h4>
@@ -78,9 +79,9 @@
 						<input type="submit" id="submitButton" value="Send Message" />
 					</div>
 				</form>
-			</div> -->
+			</div>
 		</div>
-	</div>
+	</div>  -->
 	<!--
 	<script src="script.js"></script>
 	-->
