--- a/vol-bene.html
+++ b/vol-bene.html
@@ -8,8 +8,9 @@
   <body>
     <h3>Where do I spend my time or money?</h3>
     <ul class="about-list">
-      <li>Destination Imagination</li>
-      <li>Women's Resource Center</li>
+      <li><a href="https://www.dicolorado.com/">Destination Imagination</a></li>
+      <li><a href="http://wrcdurango.org/">Women's Resource Center</a></li>
+      <li><a href="https://www.bgclaplata.org/">La Plata County Boys and Girls Club</a></li>
       <li><a href="https://www.swe.org">Society of Women Engineers</a></li>
     </ul>
   </body>
