--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	<title>Diane Howe Portfolio</title>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="favicon2.ico">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 
