Different CSS layout notes

--- a/Tricks-CSS/css-tricks.html
+++ b/Tricks-CSS/css-tricks.html
@@ -8,7 +8,25 @@
 </head>
 
 <body>
+<p>
+  Color Palette Tool at <a href="http://colorhunt.co">Color Hunt</a>
+</p>
 
+<div class="top-container"></div>
+
+<div class="bottom-container"></div>
+
+<div class="box1">
+  <img src="images/cloud.png" alt="cloud1">
+</div>
+
+<div class="box2">
+  <img src="images/cloud.png" alt="cloud">
+</div>
+
+<div class="diag-container">
+  <div class="pink-box"></div>
+  <div class="blue-box"></div>
+</div>
 </body>
-
 </html>
