--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 			<h3 class="projects-heading">My Projects</h3>
 			<div class="projects-grid">
 				<div class="project-image-wrapper">
+					<a href="Tricks-CSS/css-tricks.html">
 					<img class="project-image" src="images/project-1.jpg" />
-					<h4>Project 1</h4>
+				</a>
+					<h4>CSS and Color Palettes</h4>
 				</div>
 				<div class="project-image-wrapper">
 					<img class="project-image" src="images/project-2.jpg" />
