Style links, add css notes

--- a/Tricks-CSS/css-tricks.html
+++ b/Tricks-CSS/css-tricks.html
@@ -8,9 +8,14 @@
 </head>
 
 <body>
+  <div class="fun-links">
+    <p>
+      <a href="https://fonts.google.com">fonts.google.com</a>
+    </p>
 <p>
   Color Palette Tool at <a href="http://colorhunt.co">Color Hunt</a>
 </p>
+  </div>
 
 <div class="top-container"></div>
 
@@ -27,6 +32,14 @@
 <div class="diag-container">
   <div class="pink-box"></div>
   <div class="blue-box"></div>
+</div>
+
+<div class="image-container">
+  <img class="chilli-img" src="images/chillies.png" alt="chillie">
+  <h2>Some notes on Chillies</h2>
+<p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
+  bibendum interdum, 
+  lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
 </div>
 </body>
 </html>
