--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 					<h4>CSS and Color Palettes</h4>
 				</div>
 				<div class="project-image-wrapper">
-					<img class="project-image" src="images/project-2.jpg" />
-					<h4>Project 2</h4>
+					<a href="wireframes/cards-boot.html">
+					<img class="project-image" src="images/project-2.jpg" /> </a>
+					<h4>Wireframes</h4>
 				</div>
 			</div>
 		</div>
