Add bootstrap and font awesome

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<div class="intro">
-			<img class="profile-picture" src="images/DianeHeadShot.jpeg" alt="diane howe profile picture"/>
+			<img class="profile-picture" src="images/DianeHeadShot.jpeg" alt="diane howe profile picture" />
 			<h1>Diane Howe</h1>
 			<h3>Software Engineer at <a href="https://www.syncroness.com">Syncroness</a></h3>
 			<p>{{ curiouser and curiouser }}</p>
@@ -44,15 +44,15 @@
 			<h3 class="projects-heading">My Projects</h3>
 			<div class="projects-grid">
 				<div class="project-image-wrapper">
-					<a href="Tricks-CSS/css-tricks.html">
-					<img class="project-image" src="images/project-1.jpg" />
-				</a>
-					<h4>CSS and Color Palettes</h4>
-				</div>
+					<a href="templates/index.html">
+						<img class="project-image" src="images/project-2.jpg" /> </a>
+						<h4>Templates</h4>
+					</div>
 				<div class="project-image-wrapper">
-					<a href="wireframes/cards-boot.html">
-					<img class="project-image" src="images/project-2.jpg" /> </a>
-					<h4>Wireframes</h4>
+					<a href="Tricks-CSS/css-tricks.html">
+						<img class="project-image" src="images/project-1.jpg" />
+					</a>
+					<h4>CSS and Color Palettes</h4>
 				</div>
 			</div>
 		</div>
@@ -68,7 +68,7 @@
 				</ul>
 			</div>
 
-<!--
+			<!--
 			<div>
 				<form action="mailto: email@gmail.com">
 					<label for="email">
@@ -86,7 +86,7 @@
 			</div>
 		</div>
 	</div>  -->
-	<!--
+			<!--
 	<script src="script.js"></script>
 	-->
 </body>
