--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="intro">
 			<img class="profile-picture" src="images/DianeHeadShot.jpeg" alt="diane howe profile picture" />
 			<h1>Diane Howe</h1>
-			<h3>Software Engineer at <a href="https://www.syncroness.com">Syncroness</a></h3>
+			<h3>Software Engineer</h3>
 			<p>{{ curiouser and curiouser }}</p>
 		</div>
 		<hr />
@@ -24,7 +24,7 @@
 				<h3>I Am</h3>
 				<ul class="about-list">
 					<li>A Mom</li>
-					<li><a href="vol-bene.html">A volunteer and benefactor</a></li>
+					<li><a href="vol-bene.html">A volunteer</a></li>
 					<li>Member of <a href="https://www.swe.org">Society of Women Engineers</a></li>
 				</ul>
 			</div>
